--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
+<shared-menu></shared-menu>
 <router-outlet></router-outlet>
-
-<h1>{{title | titlecase}}</h1>
-<h1>{{title | slice:1:5}}</h1>
-
-<p-button label="Click"></p-button>
-<p-button icon="pi pi-check" label="Click" iconPos="right"></p-button>
